--- a/src/component/CardProduct/style.css
+++ b/src/component/CardProduct/style.css
@@ -1,9 +1,4 @@
-.list-product {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 4rem 7rem;
-}
+
 .list-product .card-list-product {
     min-width: 156px;
     width: calc(25% - 20px);
@@ -13,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 6rem;
+    margin-right: 20px;
     border-radius:30px ;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
