--- a/src/sections/Favorites/style.css
+++ b/src/sections/Favorites/style.css
@@ -30,6 +30,18 @@
     flex-direction: column;
     justify-content: space-between;
 }
+.favorite .container .box-variant .card2 {
+    width: 330px;
+    height: 760px;
+    margin: 0 25px;
+    align-items: center;
+    background: #FFFFFF;
+    border: 2px solid #DDDDDD;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .favorite .container .box-variant .card:hover {
     border: 2px solid #6A4029;
     transition: 0.3s;
@@ -38,6 +50,16 @@
     background-color: red;
 }
 .favorite .container .box-variant .card h4 {
+    margin: 24px 0 30px;
+    font-family: Rubik;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: 0;
+    text-align: center;
+
+}
+.favorite .container .box-variant .card2 h4 {
     margin: 24px 0 30px;
     font-family: Rubik;
     font-size: 20px;
@@ -100,3 +122,66 @@
     text-align: left;
 
 }
+.card2 img {
+    width: 168px;
+    height: 168px;
+    margin: 63px 0 23.5px;
+    border-radius: 100%;
+}
+.card2 .description .text {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.card2 .description .text img {
+    width: 13.3px;
+    height: 10px;
+    margin: 0 25.6px;
+}
+.card2 .description .text p {
+    margin: 0;
+}
+.card2 .description .text p {
+    margin: 0;
+    font-family: Rubik;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0;
+    text-align: left;
+    color: #4F5665;
+
+}
+.card2 .price {
+    font-family: Rubik;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: 0;
+    text-align: center;
+
+}
+.card2 button {
+    background: #FFFFFF;
+    border: 4px solid #DDDDDD;
+    border-radius: 30px;
+    color: #6A4029;
+    padding: 13px 47px;
+    font-family: Rubik;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0;
+    text-align: left;
+
+}
+
+@media only screen and (max-width: 760px) {
+    .favorite .container .box-variant .card {
+        margin-bottom: 3rem;
+    }
+    .favorite .container .box-variant .card2 {
+        display: none;
+        background-color: aqua;
+    }
+  }
