--- a/src/sections/HistorySection/style.css
+++ b/src/sections/HistorySection/style.css
@@ -13,7 +13,7 @@
 }
 .history-page .box-history{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     flex-wrap: wrap;
     margin:6rem 0;
     width: 100%;
@@ -25,5 +25,5 @@
     background-color: #FFFFFF;
     padding: 20px;
     border-radius:20px;
-    margin: 12px 0;
+    margin: 2vh 2%;
 }
