--- a/src/sections/Navbar/style.css
+++ b/src/sections/Navbar/style.css
@@ -1,7 +1,15 @@
 .navbar {
     width: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    background: none;
+    background-color: #FFF;
+    backdrop-filter: blur(12px);
+    position: fixed;
+    top: 0;
+    z-index: 100;
 }
 
 
@@ -28,17 +36,6 @@
     letter-spacing: 0;
     text-align: left;
     margin-left: 15px;
-}
-.navbar .menu {
-    display: flex;
-    font-family: Rubik;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 19px;
-    letter-spacing: 0;
-    text-align: left;
-    color: #4F5665;
-
 }
 .navbar .menu P {
     margin-right: 40px;
@@ -72,4 +69,12 @@
     letter-spacing: 0;
     text-align: left;
 
+}
+
+
+
+@media only screen and (max-width: 750px) {
+    .navbar .inner{
+        height: 90px; ;
+    }
 }
