--- a/src/sections/Partner/style.css
+++ b/src/sections/Partner/style.css
@@ -16,6 +16,15 @@
     margin: 74px 0;
 }
 .partner .list-partner img {
-    max-width: 190px;
+    width: 20%;
     filter: opacity(50%) grayscale(100%);
 }
+@media only screen and (max-width: 760px) {
+    .partner .list-partner img {
+        width: 20%;
+        filter: opacity(50%) grayscale(100%);
+    }
+    .partner .list-partner {
+        margin: 18px 0;
+    }
+  }
