--- a/src/sections/Product/style.css
+++ b/src/sections/Product/style.css
@@ -1,11 +1,11 @@
 
-.container2 .product-promo {
+.product-promo {
     display: flex;
-    flex: 0.3;
+    width: 30%;
     flex-direction: column;
-    align-items: center;
-    border-right: #9F9F9F solid;
-    border-top: #9F9F9F solid;
+    align-items:start ;
+    border-right: #9F9F9F solid 3px;
+    margin-left: 80px;
 
 }
 .nav-profile{
@@ -13,11 +13,11 @@
     justify-content: space-between;
     width: 11rem;
 }
-
-.container2 .product-promo .card-promo {
+.product-promo .card-promo {
     position: relative;
-    width: 17.8rem;
-    height: 31rem;
+    width: 100%;
+    width: 15.8rem;
+    height: 30rem;
 }
 .product-promo .card-promo .inner {
     display: flex;
@@ -33,6 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px;
 }
 /* .card-promo .inner .content-promo hr.dotted {
     border-top: 1px dashed red;
@@ -91,16 +92,17 @@
 }
 .container2 .product {
     display: flex;
-    flex: 0.7;
+    width: 60%;
     flex-direction: column;
-    border-top: #9F9F9F solid;
     position: relative;
 }
 .nav-product {
-    padding: 1rem 7rem;
+    width: 100%;
+    padding: 29px 150px;
+    min-width: 1040px;
 }
 .nav-product ul {
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
@@ -117,8 +119,8 @@
 .list-product {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 4rem 7rem;
+    justify-content: left;
+
 }
 .list-product .card-list-product img{
     position: absolute;
