--- a/src/sections/ReviewCard/style.css
+++ b/src/sections/ReviewCard/style.css
@@ -34,50 +34,49 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 60px 0 277px;
+    /* margin: 60px 0 277px; */
 }
-.review-costumer .box-card .card {
-    width: 30%;
-    height: 230px;
+.card {
+    width: 100%;
+    height: 250px;
     padding: 30px;
     background: #FFFFFF;
     border: 2px solid #6A4029;
     border-radius: 10px;
-    margin: 0 30px;
 }
-.box-card .card .navbar-card {
+.card .navbar-card {
     width: 100%;
     height: 50px;
     display: flex;
     justify-content: space-between;
 }
-.box-card .card .profile {
+.card .profile {
     display: flex;
     width: 70%;
     align-items: center;
 }
-.box-card .card .profile img {
+.card .profile img {
     max-width: 50px;
     max-height: 50px;
     margin: 0 12px 0 0;
 }
-.box-card .card .profile h5 {
+.card .profile h5 {
     margin: 0;
     padding: 0;
     font-size: 18px;
 }
-.box-card .card .profile p {
+.card .profile p {
     margin: 0;
     padding: 0;
     font-size: 12px;
 }
-.box-card .card .navbar-card .ratting {
+.card .navbar-card .ratting {
     width: 30%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
-.box-card .card .navbar-card .ratting p {
+.card .navbar-card .ratting p {
     margin: 0;
     padding: 0 12px 0 0;
     font-family: 'Rubik';
@@ -86,13 +85,13 @@
     font-size: 16px;
     color: #0B132A;
 }
-.box-card .card .navbar-card .ratting img {
+.card .navbar-card .ratting img {
     max-width: 13.3px;
     max-height: 12.4px;
     padding: 0;
     margin: 0;
 }
-.box-card .card p {
+.card p {
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
@@ -104,3 +103,24 @@
     margin: 24px 0 0;
     padding: 0;
 }
+.swipper-slide{
+    margin: 0 !important;
+    width: 100%;
+    justify-content: space-between;
+}
+
+@media only screen and (max-width: 760px) {
+    .review-costumer .box-card .card {
+        width: 100%;
+        padding: 16px;
+        height: 230px;
+        padding: 30px;
+        margin: 0 20px;
+    }
+    .review-costumer .box-card {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin: 60px 0 277px;
+    }
+  }
