--- a/src/sections/Store/style.css
+++ b/src/sections/Store/style.css
@@ -13,3 +13,14 @@
     width: 100%;
     margin-top: 155px;
 }
+
+@media only screen and (max-width: 760px) {
+    .map-below {
+        display: flex;
+        justify-content: center;
+        margin-top: 0;
+    }
+    .map-below img {
+        margin-top: 30px;
+    }
+  }
