--- a/src/style/Global.css
+++ b/src/style/Global.css
@@ -3,7 +3,6 @@
     max-width: 1440px;
     width: 100%;
     padding: 0 150px;
-    height: 100%;
 }
 
 body {
@@ -38,14 +37,6 @@ body {
     cursor: pointer;
 }
 
-.btn2 {
-    outline: 0;
-    border: 0;
-    padding: 10px 30px;
-    border-radius: 5px;
-    transition: 500ms;
-    cursor: pointer;
-}
 .btn3 {
     outline: 0;
     border: 0;
@@ -100,22 +91,6 @@ body {
 .btn-block {
     width: 100%;
 }
-.btn-danger {}
-
-.btn-success {}
-
-.btn-warning {}
-.rounded {
-    border-radius: 5px;
-}
-.rounded-xl {
-    border-radius: 15px;
-
-}
-.rounded-max{
-    border-radius: 100%;
-}
-
 /* on hover btn */
 .btn-primary:hover {
     box-shadow: 0 6px 20px rgba(255, 186, 51, 0.4);
@@ -149,46 +124,6 @@ input[type="file"] {
     text-align: left;
     color: #0B132A;
 }
-.tw-auto {
-    width: auto;
-}
-.tw-500 {
-    width: 31rem;
-}
-.tw-550 {
-    width: 33rem;
-}
-.tw-400 {
-    width: 25rem;
-}
-.tw-250 {
-    width: 15rem;
-}
-.tw-600 {
-    width: 34.5rem;
-}
-
-.tw-700 {
-    width: 43rem;
-}
-.tw-40{
-    width: 70%;
-}
-.tw-60{
-    width: 60%;
-}
-.tw-100{
-    width: 100%;
-}
-.desc {
-    font-family: Rubik;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 0;
-    text-align: center;
-    color: #4F5665;
-}
 .text-center {
     text-align: center;
 }
@@ -200,7 +135,6 @@ input[type="file"] {
 }
 .text-secondary {
     color: #6A4029;
-    font-size: 24px;
 }
 .text-block {
     color: #000000;
@@ -209,148 +143,6 @@ input[type="file"] {
     color: #FFFFFF;
 }
 
-/* FONT-SIZE */
-.text-xs {
-    margin-top: 0.75rem;  /* 12px */
-    line-height: 1rem;  /* 16px */
-}
-.text-sm {
-    font-size: 0.875rem;  /* 14px */
-    line-height: 1.25rem;  /* 20px */
-}
-.text-base {
-    font-size: 1rem;  /* 16px */
-    line-height: 1.5rem;  /* 24px */
-}
-.text-lg {
-    font-size: 1.125rem;  /* 18px */
-    line-height: 1.75rem;  /* 28px */
-}
-.text-xl {
-    font-size: 1.25rem;  /* 20px */
-    line-height: 1.75rem;  /* 28px */
-}
-.text-2xl {
-    font-size: 1.5rem;  /* 24px */
-    line-height: 2rem;  /* 32px */
-}
-.text-3xl {
-    font-size: 1.875rem;  /* 30px */
-    line-height: 2.25rem;  /* 36px */
-}
-.text-4xl {
-    font-size: 2.25rem;  /* 36px */
-    line-height: 2.5rem;  /* 40px */
-}
-.text-5xl {
-    font-size: 3rem;  /* 48px */
-    line-height: 1;
-}
-.text-6xl {
-    font-size: 3.75rem;  /* 60px */
-    line-height: 1;
-}
-.text-7xl {
-    font-size: 4.5rem;  /* 72px */
-    line-height: 1;
-}
-.text-8xl {
-    font-size: 6rem;  /* 96px */
-    line-height: 1;
-}
-.text-9xl {
-    font-size: 8rem; /* 128px */
-    line-height: 1;
-}   
-
-/* FONT SIZE END */
-
-/* FONT-WEIGHT */
-
-    .font-thin{
-        font-weight: 100;
-    }	
-    .font-extralight{
-        font-weight: 200;
-    }	
-    .font-light{
-        font-weight: 300;
-    }	
-    .font-normal{
-        font-weight: 400;
-    }
-    .font-medium{
-        font-weight: 500;
-    }	
-    .font-semibold{
-        font-weight: 600;
-    }	
-    .font-bold{
-        font-weight: 700;
-    }	
-    .font-extrabold{
-        font-weight: 800;
-    }	
-    .font-black{
-        font-weight: 900;
-    }
-
-/* FONT-WEIGHT END */
-
-
-/* margin & padding*/
-.m-0 {
-    margin: 0;
-}
-.m-xy-125 {
-    margin: 125px 0;
-}
-.mb-0 {
-    margin-bottom: 0;
-}
-.mb-5 {
-    margin-bottom: 2rem;
-}
-.mb-220 {
-    margin-bottom: 13.5rem;
-}
-
-.mb-3 {
-    margin-bottom: 1rem;
-}
-.mb-50 {
-    margin-bottom: 3rem;
-}
-.mr-10 {
-    margin-right: 10px;
-}
-.mr-40 {
-    margin-right: 40px;
-}
-.p-50 {
-    padding: 50px;
-}
-.p-30 {
-    padding: 30;
-}
-.p-0 {
-    padding: 0;
-}
-.p-10 {
-    padding: 10;
-}
-.pr-35 {
-    padding-right: 35px;
-}
-.p-xy-20 {
-    padding: 20px 20px;
-}
-.mt-53 {
-    margin-top: 3.33rem;
-}
-.mt-100{
-    margin-top: 6.2rem;
-}
 /* form */
 .form-label {
     width: 100%;
@@ -426,7 +218,6 @@ input[type="file"] {
 }
 .info-wrapper .box-content .info {
     color: #0B132A;
-    padding: 56px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -445,32 +236,8 @@ input[type="file"] {
     filter: blur(57px);
     border-radius: 10px;
 }
-/* DISPLAY */
-.flex {
-    display: flex;
-}
-.justify-center {
-    justify-content: center;
-}
-.justify-between {
-    justify-content: space-between;
-}
-.items-center {
-    align-items: center;
-}
-.items-start {
-    align-items: flex-start;
-}
-.items-end {
-    align-items: flex-end;
-}
-.flex-col {
-    flex-direction: column;
-}
-/* DISPLAY-END*/
 
-
-/* @media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1000px) {
     .container {
         max-width: 100%;
         width: 100%;
@@ -482,6 +249,6 @@ input[type="file"] {
     .container {
         max-width: 100%;
         width: 100%;
-        padding: 0 54.6px;
+        padding: 0 16px;
     }
-} */
+} 
