--- a/src/sections/HistorySection/style.css
+++ b/src/sections/HistorySection/style.css
@@ -13,17 +13,18 @@
 }
 .history-page .box-history{
     display: flex;
-    justify-content: center;
+    justify-content: start;
     flex-wrap: wrap;
     margin:6rem 0;
     width: 100%;
 }
 .history-page .box-history .card-history{
     display: flex;
-    width: 31%;
+    width: 31.3%;
     align-items: center;
     background-color: #FFFFFF;
     padding: 20px;
     border-radius:20px;
-    margin-right:2% ;
+    margin:0 1%;
+    margin-bottom:2vh;
 }
