--- a/src/style/Global.css
+++ b/src/style/Global.css
@@ -1,254 +1,250 @@
-
 .container {
-    max-width: 1440px;
-    width: 100%;
-    padding: 0 150px;
+  max-width: 1440px;
+  width: 100%;
+  padding: 0 150px;
 }
 
 body {
-    margin: 0;
-    font-family: 'Rubik', sans-serif;
+  margin: 0;
+  font-family: "Rubik", sans-serif;
 }
 .container2 {
-    display: flex;
-    flex-direction: row;
-    flex: 1;
+  display: flex;
+  flex-direction: row;
+  flex: 1;
 }
 
 /* NAVBAR-PROFILE */
 
 .nav-profile {
-    display: flex;
-    justify-content: space-between;
-    width: 11rem;
+  display: flex;
+  justify-content: space-between;
+  width: 11rem;
 }
 /* NAVBAR-PROFILE END*/
 
 .btn {
-    font-family: rubik;
-    font-weight: 700;
-    background: #e6e6e6;
-    color: #333;
-    outline: 0;
-    border: 0;
-    padding: 17px 80px;
-    border-radius: 5px;
-    transition: 500ms;
-    cursor: pointer;
+  font-family: rubik;
+  font-weight: 700;
+  background: #e6e6e6;
+  color: #333;
+  outline: 0;
+  border: 0;
+  padding: 17px 80px;
+  border-radius: 5px;
+  transition: 500ms;
+  cursor: pointer;
 }
 
 .btn3 {
-    outline: 0;
-    border: 0;
-    border-radius: 5px;
-    transition: 500ms;
-    cursor: pointer;
-    font-weight: 700;
+  outline: 0;
+  border: 0;
+  border-radius: 5px;
+  transition: 500ms;
+  cursor: pointer;
+  font-weight: 700;
 }
 .btn-google {
-    display: flex;
-    align-items: center;
-    color: #000000;
-    justify-content: center;
-    background-color: #FFFFFF;
-    box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
-    
+  display: flex;
+  align-items: center;
+  color: #000000;
+  justify-content: center;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
 }
 .btn-forgot {
-    padding: 32px 185px;
-    margin: 20 px 0;
-    background-color: #6A4029;
-    color: #FFFFFF;
-    font-size: 26px;
+  padding: 32px 185px;
+  margin: 20 px 0;
+  background-color: #6a4029;
+  color: #ffffff;
+  font-size: 26px;
 }
 
 .btn-primary {
-    background-color: #FFBA33;
-    color: #6A4029;
+  background-color: #ffba33;
+  color: #6a4029;
 }
 
 .btn-submit {
-    background-color: #FFBA33;
-    color: #6A4029;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 45px;
-    letter-spacing: 0;
-    text-align: center;
+  background-color: #ffba33;
+  color: #6a4029;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 45px;
+  letter-spacing: 0;
+  text-align: center;
 }
 .btn-secondary {
-    background-color: #6A4029;
-    color: #FFFFFF;
+  background-color: #6a4029;
+  color: #ffffff;
 }
 .btn-input {
-    background-color: #0B132A;
-    color: #FFFFFF;
-} 
+  background-color: #0b132a;
+  color: #ffffff;
+}
 .btn-light {
-    background-color: #BABABA;
-    color: #4F5665;
+  background-color: #bababa;
+  color: #4f5665;
 }
 .btn-block {
-    width: 100%;
+  width: 100%;
 }
 /* on hover btn */
 .btn-primary:hover {
-    box-shadow: 0 6px 20px rgba(255, 186, 51, 0.4);
+  box-shadow: 0 6px 20px rgba(255, 186, 51, 0.4);
 }
 .btn-secondary:hover {
-    box-shadow: 0 6px 20px rgba(106, 64, 41, 0.63);
+  box-shadow: 0 6px 20px rgba(106, 64, 41, 0.63);
 }
 .btn-input:hover {
-    box-shadow: 0 6px 20px rgba(3, 24, 101, 0.816);
+  box-shadow: 0 6px 20px rgba(3, 24, 101, 0.816);
 }
 input[type="file"] {
-    display: none;
+  display: none;
 }
 /* end on hover btn */
 
 /* text */
 .text-label {
-    font-family: Rubik;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 70px;
-    letter-spacing: 0;
-    text-align: left;
+  font-family: Rubik;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 70px;
+  letter-spacing: 0;
+  text-align: left;
 }
 .title {
-    font-family: Rubik;
-    font-size: 35px;
-    font-weight: 600;
-    line-height: 50px;
-    letter-spacing: 0;
-    text-align: left;
-    color: #0B132A;
+  font-family: Rubik;
+  font-size: 35px;
+  font-weight: 600;
+  line-height: 50px;
+  letter-spacing: 0;
+  text-align: left;
+  color: #0b132a;
 }
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 .text-left {
-    text-align: start;
+  text-align: start;
 }
 .text-primary {
-    color: #FFBA33;
+  color: #ffba33;
 }
 .text-secondary {
-    color: #6A4029;
+  color: #6a4029;
 }
 .text-block {
-    color: #000000;
+  color: #000000;
 }
-.text-white{
-    color: #FFFFFF;
+.text-white {
+  color: #ffffff;
 }
 
 /* form */
 .form-label {
-    width: 100%;
-    font-size: 16px;
-    font-weight: 700;
-    font-weight: bold;
-    padding: 18px 0.5vw;
-    color: #4F5665;
-
+  width: 100%;
+  font-size: 16px;
+  font-weight: 700;
+  font-weight: bold;
+  padding: 18px 0.5vw;
+  color: #4f5665;
 }
 .form-input {
-    border: 1px solid #4F5665;
-    color: #9F9F9F;
-    padding: 18px 0.5vw;
-    width: 100%;
-    display: block;
-    font-family: Rubik;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0;
-    text-align: left;
-
+  border: 1px solid #4f5665;
+  color: #9f9f9f;
+  padding: 18px 0.5vw;
+  width: 100%;
+  display: block;
+  font-family: Rubik;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+  text-align: left;
 }
 
 /* logo */
 .brand {
-    flex-direction: row;
-    display: flex;
-    align-items: center;
+  flex-direction: row;
+  display: flex;
+  align-items: center;
 }
 .brand h3 {
-    margin-left: 15px;
+  margin-left: 15px;
 }
 
 /* CARD PROMO */
 .promo {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
-
 
 .box-info-wreapper {
-    position: relative;
-    height: 100%;
-    z-index: 20;
+  position: relative;
+  height: 100%;
+  z-index: 20;
 }
 .info-wrapper .inner {
-    width: 100%;
-    height: auto;
-    position: relative;
+  width: 100%;
+  height: auto;
+  position: relative;
 }
 .info-wrapper .inner .box-content {
-    background-color: #fff;
-    width: 100%;
-    height: 100%;
-    background: #FFFFFF;
-    border-radius: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0 13px 27px -5px, rgba(0, 0, 0, 0.3) 0 8px 16px -8px;
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0 8px 16px -8px;
 }
 .text-box-promo {
-    display: flex;
-    justify-content: space-between;
-    padding: 55px;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 55px;
+  align-items: center;
 }
 .info-wrapper {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    max-width: 1440px;
-    width: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  max-width: 1440px;
+  width: 100%;
 }
 .info-wrapper .box-content .info {
-    color: #0B132A;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  color: #0b132a;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .info-wrapper .box-shadow {
-    position: absolute;
-    width: calc(100% - 40px);
-    height: 100%;
-    filter: blur();
-    bottom: -24px;
-    z-index: -1;
-    margin-left: 20px;
-    background: #0D1025;
-    opacity: 0.06;
-    filter: blur(57px);
-    border-radius: 10px;
+  position: absolute;
+  width: calc(100% - 40px);
+  height: 100%;
+  filter: blur();
+  bottom: -24px;
+  z-index: -1;
+  margin-left: 20px;
+  background: #0d1025;
+  opacity: 0.06;
+  filter: blur(57px);
+  border-radius: 10px;
 }
 
 @media only screen and (max-width: 1000px) {
-    .container {
-        max-width: 100%;
-        width: 100%;
-        padding: 0 75px;
-    }
+  .container {
+    max-width: 100%;
+    width: 100%;
+    padding: 0 75px;
+  }
 }
 
 @media only screen and (max-width: 750px) {
-    .container {
-        max-width: 100%;
-        width: 100%;
-        padding: 0 16px;
-    }
-} 
+  .container {
+    max-width: 100%;
+    width: 100%;
+    padding: 0 16px;
+  }
+}
