--- a/src/sections/Product/style.css
+++ b/src/sections/Product/style.css
@@ -1,132 +1,167 @@
-
 .product-promo {
-    display: flex;
-    width: 30%;
-    flex-direction: column;
-    align-items:start ;
-    border-right: #9F9F9F solid 3px;
-    margin-left: 80px;
-
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+  align-items: start;
+  border-right: #9f9f9f solid 3px;
+  margin-left: 80px;
 }
-.nav-profile{
-    display: flex;
-    justify-content: space-between;
-    width: 11rem;
+.nav-profile {
+  display: flex;
+  justify-content: space-between;
+  width: 11rem;
 }
 .product-promo .card-promo {
-    position: relative;
-    width: 100%;
-    width: 15.8rem;
-    height: 30rem;
+  position: relative;
+  width: 100%;
+  width: 15.8rem;
+  height: 30rem;
 }
 .product-promo .card-promo .inner {
-    display: flex;
-    position: absolute;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    background-color: #FFCB65;
-    z-index: 3;
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: #ffcb65;
+  z-index: 3;
 }
 .card-promo .inner .content-promo {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 /* .card-promo .inner .content-promo hr.dotted {
     border-top: 1px dashed red;
     width: 100%;
 } */
 .product-promo .card-promo .box-black {
-    display: flex;
-    position: absolute;
-    width: 100%;
-    height: calc(100% - 72px);
-    background: #000000;
-    left: 24px;
-    z-index: 2;
-    margin-top: 36px;
-
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: calc(100% - 72px);
+  background: #000000;
+  left: 24px;
+  z-index: 2;
+  margin-top: 36px;
 }
 .product-promo .card-promo .box-brown {
-    display: flex;
-    position: absolute;
-    width: 100%;
-    height: calc(100% - 134px);
-    background: #895537;
-    left: 48px;
-    z-index: 1;
-    margin-top: 67px;
-
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: calc(100% - 134px);
+  background: #895537;
+  left: 48px;
+  z-index: 1;
+  margin-top: 67px;
 }
 .product-promo .desc-product {
-    font-family: Rubik;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 0;
-    text-align: star;
-    color: #4F5665;
-    width: auto;
-    width: 70%;
+  font-family: Rubik;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0;
+  text-align: star;
+  color: #4f5665;
+  width: auto;
+  width: 70%;
 }
 .product-promo .desc-product h5 {
-    font-weight: 700;
-    line-height: 16px;
-    margin: 0;
+  font-weight: 700;
+  line-height: 16px;
+  margin: 0;
 }
 .product-promo .desc-product p {
-    font-weight: 400;
-    line-height: 14px;
-    margin: 0;
-    text-align: start;
+  font-weight: 400;
+  line-height: 14px;
+  margin: 0;
+  text-align: start;
 }
 .product-promo p {
-    font-family: Rubik;
-    font-weight: 400;
-    letter-spacing: 0;
-    text-align: center;
-    color: #000000;
+  font-family: Rubik;
+  font-weight: 400;
+  letter-spacing: 0;
+  text-align: center;
+  color: #000000;
 }
 .container2 .product {
-    display: flex;
-    width: 60%;
-    flex-direction: column;
-    position: relative;
+  display: flex;
+  width: 60%;
+  flex-direction: column;
+  position: relative;
 }
 .nav-product {
-    width: 100%;
-    padding: 29px 150px;
-    min-width: 1040px;
+  width: 100%;
+  padding: 29px 150px;
+  min-width: 1040px;
 }
 .nav-product ul {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    list-style-type: none;
-    font-family: Rubik;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0;
-    text-align: left;
-    color: #9F9F9F;
-
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  list-style-type: none;
+  font-family: Rubik;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+  text-align: left;
+  color: #9f9f9f;
 }
 .list-product {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: left;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
 }
-.list-product .card-list-product img{
-    position: absolute;
-    width:128px;
-    height:128px;
-    top: -64px;
-
+.list-product .card-list-product img {
+  position: absolute;
+  width: 128px;
+  height: 128px;
+  top: -64px;
 }
 
+/* list filter style */
+.cool-link {
+  display: inline-block;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.cool-link::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #895537;
+  transition: width 0.3s;
+}
+
+.cool-link:hover::after {
+  width: 100%;
+  /* //transition: width .3s; */
+}
+.list-filter-active {
+  display: inline-block;
+  font-weight: 500;
+  color: #895537;
+}
+
+.list-filter-active::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #895537;
+}
+
+@media screen and (max-width: 1024px) {
+  .product-promo {
+    display: none;
+  }
+  .list-product {
+    justify-content: center;
+  }
+}
