--- a/src/component/Loader/style.css
+++ b/src/component/Loader/style.css
@@ -1,16 +1,12 @@
 .lds-ring {
   display: inline-block;
   position: relative;
-  /* width: 20px;
-  height: 20px; */
 }
 .lds-ring div {
   box-sizing: border-box;
   display: block;
   position: absolute;
-  /* width: 20px;
-  height: 20px; */
-  border: 3px solid #6a4029;
+  border: 3px solid;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   border-color: #6a4029 transparent transparent transparent;
