update user and admin page

--- a/src/style/Global.css
+++ b/src/style/Global.css
@@ -233,6 +233,14 @@ input[type="file"] {
   border-radius: 10px;
 }
 
+@media only screen and (max-width: 1200px) {
+  .container {
+    max-width: 100%;
+    width: 100%;
+    padding: 0 60px;
+  }
+}
+
 @media only screen and (max-width: 1000px) {
   .container {
     max-width: 100%;
