--- a/src/sections/Favorites/style.css
+++ b/src/sections/Favorites/style.css
@@ -13,10 +13,10 @@
     text-align: center;
 }
 .favorite .container .box-variant {
-    display: flex;
+    /* display: flex;
     justify-content: space-between;
     margin-top: 90px;
-    width: 100%;
+    width: 100%; */
 }
 .favorite .container .box-variant .card {
     width: 330px;
